CR remarks, adding javadoc, updating tests